Agent query: Are the MP4 videos in the horoscope section now visible and playing correctly? Is the layout of the videos in the horoscope section appropriate?

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -113,104 +113,6 @@ h1 {
     font-family: "Comic Sans MS", cursive;
 }
 
-.favorite-things {
-    margin-top: 40px;
-    background-color: #00FFFF;
-    padding: 20px;
-    border: 3px solid #FF00FF;
-}
-
-.favorite-things h2 {
-    color: #FF00FF;
-    text-shadow: 1px 1px #FFFF00;
-}
-
-.favorites-container {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-}
-
-.favorite-movies, .favorite-foods {
-    background-color: rgba(255, 255, 255, 0.7);
-    padding: 15px;
-    border: 2px dashed #FF00FF;
-    margin: 10px;
-    flex-basis: 45%;
-}
-
-.favorite-movies h3, .favorite-foods h3 {
-    color: #FF6600;
-}
-
-.favorite-movies ul, .favorite-foods ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-.favorite-movies li, .favorite-foods li {
-    color: #0000FF;
-    margin-bottom: 5px;
-}
-
-.music-player {
-    margin-top: 40px;
-    background-color: #FF1493;
-    padding: 20px;
-    border: 3px solid #00FF00;
-}
-
-.music-player h2 {
-    color: #FFFF00;
-    text-shadow: 2px 2px #0000FF;
-}
-
-.player-container {
-    background-color: rgba(255, 255, 255, 0.7);
-    padding: 15px;
-    border: 2px dashed #00FF00;
-}
-
-.player-controls {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 15px;
-}
-
-.control-button {
-    background-color: #00FF00;
-    color: #000000;
-    border: none;
-    padding: 10px 15px;
-    margin: 0 5px;
-    font-size: 20px;
-    cursor: pointer;
-    border-radius: 50%;
-}
-
-.track-info {
-    font-weight: bold;
-    margin-bottom: 15px;
-}
-
-.playlist {
-    text-align: left;
-}
-
-.playlist h3 {
-    color: #FF6600;
-}
-
-.playlist ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-.playlist li {
-    color: #0000FF;
-    margin-bottom: 5px;
-}
-
 .horoscope-section {
     margin-top: 40px;
     background-color: #FFD700;
@@ -234,9 +136,9 @@ h1 {
     margin: 10px 0;
 }
 
-.horoscope-gif {
-    width: 150px;
-    height: 150px;
+.horoscope-section .gif-video {
+    width: 300px;
+    height: 300px;
     object-fit: cover;
     border: 3px solid #8A2BE2;
     margin: 10px 0;
@@ -303,7 +205,8 @@ h1 {
         height: 100px;
     }
 
-    .favorite-movies, .favorite-foods {
-        flex-basis: 100%;
+    .horoscope-section .gif-video {
+        width: 200px;
+        height: 200px;
     }
 }
